v3.21 - Not yet released

- FIXED: LZW compression now uses horizontal differencing


v3.20 - Tuesday, November 29, 2005

- ADDED: Rewrote TIFF export to save incrementally (uses much less memory)
- ADDED: Option to use LZW compression when exporting TIFF files
- ADDED: Support for Image-Pro Sequence (SEQ) format
- ADDED: Support for Image-Pro Workspace (IPW) format

- TWEAK: Smaller download size

- FIXED: Grayed out thumbnail generation stop button


v3.19 - Wednesday, November 9, 2005

- ADDED: Support for Gatan Digital Micrograph DM3 format

- FIXED: Serious bug with single images


v3.18 - Friday, November 4, 2005

- ADDED: Support for PerkinElmer file format

- TWEAK: Additional menu shortcuts

- FIXED: Rewrote arbitrary slicing logic to be more efficient
- FIXED: Z axis bug with multiple data objects in a single 3D window
- FIXED: Scaling bug with arbitrary slicing of some data
- FIXED: Data object reordering in 3D displays (Up/Down buttons)
- FIXED: Dataset importer buttons staying greyed out after an error occurs


v3.17 - Friday, October 28, 2005

- ADDED: Support for Deltavision file format
- ADDED: Support for Leica file format
- ADDED: Zeiss ZVI reader metadata parsing
- ADDED: Partial support for multiple dimensional axes per file
- ADDED: Ability to view OME-XML/OME-TIFF metadata in dataset metadata viewer

- TWEAK: Smarter autodetection of dimensional axis types


v3.16 - Monday, October 17, 2005

- TWEAK: Differentiate between QuickTime for Java missing versus expired

- FIXED: Report thumbnail recomputation properly when data objects are altered


v3.15 - Friday, October 14, 2005

- ADDED: Separate task tracking for each background task VisBio is performing
- ADDED: Rearrange main VisBio window to be more streamlined

- TWEAK: Added plugins folder for use with ImageJ from within VisBio
- TWEAK: Report more information during initial dataset creation
- TWEAK: Don't create errors.log unless necessary