@@ -1,0 +1,15 @@
+<html><body><h2>Image Cytometry Standard</h2>
+
+<p>VisBio supports reading Image Cytometry Standard (ICS) images, including
+metadata. Support is completely native, with no additional libraries required.
+
+<br><h3>See also:</h3>
+
+<ul>
+  <li><a href="import_data.html">Importing a dataset from disk</a>
+    - to load a dataset into VisBio</li>
+  <li><a href="formats.html">File formats</a>
+    - for information about supported file formats</li>
+</ul>
+
+<p>&nbsp;<p></body></html>
